--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <!-- <script>
             const mobileBtn = document.getElementById('mobile-cta')
                 nav = document.querySelector('nav')
+                mobile
 
         </script> -->
 
