--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </ul>
                     <ul class="secondary-nav">
                         <li><a href="#">Contact</a></li>
-                        <li class="go-priemium-cta"><a href="#">Go Premium</a></li>
+                        <li class="go-premium-cta"><a href="#">Go Premium</a></li>
                     </ul>
                 </nav>
             </div>
@@ -107,12 +107,20 @@
                 </div>
             </div>
         </section>
-        <!-- <script>
+        <script>
             const mobileBtn = document.getElementById('mobile-cta')
                 nav = document.querySelector('nav')
-                mobile
+                mobileBtnExit = document.getElementById('mobile-exit');
+            
+            mobileBtn.addEventListener('click', () => {
+                nav.classList.add('menu-btn');
+            })
 
-        </script> -->
+            mobileBtnExit.addEventListener('click', () => {
+                nav.classList.remove('menu-btn');
+            })
+
+        </script>
 
     </body>
 </html>
